syntax = "proto3";

// Services definition
service BlocksTransferService {
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse);
  rpc SaveBlock(SaveBlockRequest) returns (SaveBlockResponse);
}

// Messages definition
message GetBlockRequest {
  string blockIdentifier = 1;
}

message GetBlockResponse {
  map<string, string> block = 1;
}

message SaveBlockRequest {
  map<string, string> blocks = 1;
}

message SaveBlockResponse {
  bool success = 1;
}
